--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -11,31 +11,32 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "next-intl": "^3.22.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^5.17.0",
     "@tremor/react": "^3.18.0",
-    "recharts": "^2.10.0",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0",
     "lucide-react": "^0.303.0",
-    "react-hot-toast": "^2.4.1",
-    "zustand": "^4.4.7",
-    "zod": "^3.22.4",
+    "next": "^14.2.0",
+    "next-intl": "^3.22.0",
+    "next-themes": "^0.4.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.0",
-    "@hookform/resolvers": "^3.3.2"
+    "react-hot-toast": "^2.4.1",
+    "recharts": "^2.10.0",
+    "tailwind-merge": "^2.2.0",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.2.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.0",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.2.0"
+    "typescript": "^5.3.0"
   }
 }
