feat: production readiness upgrade — Supabase, Web3 Auth, 30 tools quality, AI connectors, data persistence
Phase 1 — Supabase + Auth:
- Supabase schema with 4 tables (user_profiles, analysis_history, user_favorites, saved_variants) + RLS policies
- Thirdweb Web3 wallet auth (MetaMask, Coinbase, Google, Email, Passkey)
- RBAC permissions system (FREE/PREMIUM/ADMIN) with granular access control
- ConnectWallet component integrated in header

Phase 2 — Universal Tool Quality:
- useToolState universal hook (loading/error/result/progress)
- Shared components: LoadingState, ErrorState, SkipLink, KeyboardShortcuts
- All 30 tools upgraded with role="region", aria-labels, keyboard navigation
- 7 new tool components: pharmacogenomics, microbiome, epigenetic-clock/coach, gene-therapy, rare-variants, immune-response

Phase 3 — Navigation & UX:
- 30 tools metadata registry with 6 categories (Personal, Analysis, Research, Health, Design, Education)
- CategoryNav filter, ToolCard with favorites/premium badges, ToolSearch modal (Ctrl+K)
- Favorites (Supabase + localStorage dual persistence), Recent tools tracking
- History tab in main navigation

Phase 4 — API Integration:
- useAlphaGenomeAPI hook with React Query mutations for predict/score/interval
- NCBI E-utilities and Ensembl REST API clients for data enrichment

Phase 5 — AI Connectors:
- Multi-provider AI service (Claude/GPT/Gemini) on FastAPI backend
- Frontend AI client with chat and genomic data analysis endpoints

Phase 6 — Data Persistence:
- Analysis history CRUD with share links and public share page (/share/[token])
- Saved variants library with notes, tags, significance tracking
- Fernet encryption service for API key storage
- Docs reorganization: presentations moved to docs/Presentaciones/

Made by mbxarts.com The Moon in a Box property

Co-Author: Argodez22

--- a/webapp/frontend/.env.example
+++ b/webapp/frontend/.env.example
@@ -3,6 +3,14 @@
 # Backend API URL
 NEXT_PUBLIC_API_URL=http://localhost:8000
 
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+
+# Thirdweb Configuration (Web3 Auth)
+NEXT_PUBLIC_TW_CLIENT_ID=your-thirdweb-client-id
+
 # NOTE: Your AlphaGenome API key is NOT stored here.
 # It's entered by each user in the browser and stored locally.
 # Get your FREE API key at: https://deepmind.google.com/science/alphagenome
