--- a/webapp/backend/requirements.txt
+++ b/webapp/backend/requirements.txt
@@ -36,6 +36,14 @@ python-docx>=1.1.0  # Word export
 # CORS
 starlette>=0.35.0
 
+# AI Providers
+anthropic>=0.40.0
+openai>=1.50.0
+google-generativeai>=0.8.0
+
+# Security
+cryptography>=42.0.0
+
 # Environment
 python-dotenv>=1.0.0
 
