--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@supabase/supabase-js": "^2.95.3",
     "@tanstack/react-query": "^5.17.0",
     "@tremor/react": "^3.18.0",
     "clsx": "^2.1.0",
@@ -25,6 +26,7 @@
     "react-hot-toast": "^2.4.1",
     "recharts": "^2.10.0",
     "tailwind-merge": "^2.2.0",
+    "thirdweb": "^5.118.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
